@@ -88,6 +88,7 @@
 - Added 'history.weekly', 'history.daily', 'ghistory.weekly', 'ghistory.daily'
   report variations, with code refactoring.
           (thanks to Lukas Barth).
+- New DOM references: annotations.count, tw.syncneeded.
 
 ------ current release ---------------------------
 
